--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,11 @@
-{
-  "extends": "eslint-config-egg"
 
+{
+  "extends": "eslint-config-egg",
+  "plugins": [
+    "prettier"
+  ],
+  "rules": {
+    "space-before-function-paren": "off",
+    "no-unused-vars": "off"
+  }
 }
