--- a/config/config.json
+++ b/config/config.json
@@ -1,21 +1,21 @@
 {
     "development": {
         "username": "root",
-        "password": null,
+        "password": "root",
         "database": "egg_api_frame",
         "host":"127.0.0.1",
         "dialect": "mysql" 
     },
     "test": {
         "username": "root",
-        "password": null,
+        "password": "root",
         "database": "egg_api_frame_test",
         "host":"127.0.0.1",
         "dialect": "mysql" 
     },
     "production": {
         "username": "root",
-        "password": null,
+        "password": "root",
         "database": "egg_api_frame_production",
         "host":"127.0.0.1",
         "dialect": "mysql" 
