--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "ci": "npm run lint && npm run cov",
     "autod": "autod",
     "m:new": "sequelize migration:create",
-    "m:up": "sequelize db:migration",
+    "m:up": "sequelize db:migrate",
     "m:down": "sequelize db:migration:undo"
   },
   "ci": {
