--- a/.eslintrc
+++ b/.eslintrc
@@ -5,7 +5,22 @@
     "prettier"
   ],
   "rules": {
+    "prettier/prettier": [
+      "error"
+    ],
+
     "space-before-function-paren": "off",
-    "no-unused-vars": "off"
+    "array-bracket-spacing": "off",
+    "no-unused-vars": "off",
+    "semi": "off",
+    "comma-dangle": "off",
+    "arrow-parens": "off"
+  },
+
+  "globals": {
+     "use": true,
+     "Controller": true,
+     "C": true,
+     "check": true
   }
 }
