--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ramda": "^0.26.1",
     "sequelize": "^4.42.0",
     "sequelize-cli": "^5.4.0",
+    "uuid": "^3.3.2",
     "yarn": "^1.13.0"
   },
   "devDependencies": {
